src/fewshot/npd2/npd2_warning.txt
code.cpp:21:21: error: Null pointer dereference: n[idx] [nullPointer]
    printf("%d\n", n[idx]->x);
                    ^